[WFCORE-6206] Fix Windows errors running test case